feat: sync Meta leads pipeline and platform updates